k8s/base/redemption/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redemption-api
  labels:
    app: redemption-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: redemption-api
